change  @GeneratedValue(strategy = GenerationType.IDENTITY) into Employee and add other methods to dao, service and controller

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!--Делает автоматический рестарт приложения при любом изменении кода-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
